--- a/aggregator/templates/base.html
+++ b/aggregator/templates/base.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
 {% load static %}
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>
-      {% block title %}
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link href="{% static 'css/bootstrap.min.css' %}" type="text/css" rel="stylesheet">
+  <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
+  <title>
+    {% block title %}
+    {% endblock %}
+  </title>
+</head>
+
+<body>
+  {% comment %} {% include 'includes/header.html' %} {% endcomment %}
+  <main>
+    <div class="container">
+      {% block content %}
       {% endblock %}
-    </title>
-  </head>
-  <body>
-    {% comment %} {% include 'includes/header.html' %} {% endcomment %}
-    <main>
-      <div>
-        {% block content %}
-        {% endblock %}
-      </div>
-    </main>
-    {% comment %} {% include 'includes/footer.html' %} {% endcomment %}
-  </body>
+    </div>
+  </main>
+  {% comment %} {% include 'includes/footer.html' %} {% endcomment %}
+</body>
+
 </html>
