--- a/aggregator/templates/base.html
+++ b/aggregator/templates/base.html
@@ -14,14 +14,13 @@
 </head>
 
 <body>
-  {% comment %} {% include 'includes/header.html' %} {% endcomment %}
+  {% include 'includes/header.html' %}
   <main>
-    <div class="container">
+    <div class="container py-3">
       {% block content %}
       {% endblock %}
     </div>
   </main>
-  {% comment %} {% include 'includes/footer.html' %} {% endcomment %}
 </body>
 
 </html>
