--- a/aggregator/templates/includes/create_fields.html
+++ b/aggregator/templates/includes/create_fields.html
@@ -1,11 +1,16 @@
 {% for field in form %}
-  <div class="form-group row my-3 p-3">
-    <label for="{{ field.id_for_label }}">
+  <div class="mb-3">
+    <label">
       {{ field.label }}
       {% if field.field.required %}
         <span class="required text-danger">*</span>
       {% endif %}
     </label>
     {{ field }}
+    {% if field.help_text %}
+      <div class="form-text">
+        {{ field.help_text|safe }}
+      </div>
+    {% endif %}
   </div>
 {% endfor %}
