--- a/web/templates/includes/publications.html
+++ b/web/templates/includes/publications.html
@@ -13,7 +13,7 @@
         <h5 class="card-title">{{ publication.title|safe }}</h5>
         <h6 class="card-subtitle mb-2 text-body-secondary">Дата публикации: {{ publication.pub_date|date:'d E Y' }}</h6>
         <p class="card-text">{{ publication.full_text|safe|truncatechars:255 }}</p>
-        <a href="{% url 'pages:publication_page' publication.pk %}" class="btn btn-secondary">подробная информация</a>
+        <a href="{% url 'pages:publication_page' publication.id %}" class="btn btn-secondary">подробная информация</a>
       </div>
     </div>
   </div>
