--- a/web/templates/pages/personal_page.html
+++ b/web/templates/pages/personal_page.html
@@ -4,6 +4,7 @@
 {% endblock %}
 {% block content %}
 <div class="row gy-3">
+  {{ num }}
   <div class="col-12">
     <p class="h5">Страница пользователя {{ author.username }}</p>
   </div>
